# tirakatar

./: .ghcid  .gitignore  LICENSE  android-version.nix  build-app.sh  cabal.project  default.nix  install-apk.sh  make-android.sh  overrides.nix  release-android.sh  release.nix
android/: tirakatar-android.cabal
android/cbits/: camera.c  clipboard.c  clock.c  open_url.c  share.c
android/src/Tirakatar/App/Android/: Native.hs  Run.hs
android/src/Tirakatar/App/Android/Native/: Certs.hs  MainWidget.hsc
common/: tirakatar-common.cabal
common/src/Tirakatar/: Aeson.hs  IO.hs  Lens.hs  Text.hs  Yaml.hs
crypto/: tirakatar-crypto.cabal
crypto/src/Tirakatar/: Crypto.hs
crypto/src/Tirakatar/Crypto/: AES256.hs  Base58.hs  ECDSA.hs  ECIES.hs  Hash.hs  Keys.hs  Mnemonic.hs  PBKDF.hs  Util.hs  WordLists.hs
derivations/: reflex-dom-retractable.nix  reflex-external-ref.nix  reflex-localize-dom.nix  reflex-localize.nix
desktop/: tirakatar-desktop.cabal
desktop/src/Tirakatar/App/Desktop/: Native.hs  Run.hs
native/: tirakatar-native.cabal
native/src/Tirakatar/App/: Native.hs  Run.hs
native/src/Tirakatar/App/Run/: Callbacks.hs
nix/: containers.nix  overlay.nix
tirakatar/: ghcid.sh  profile.sh  tirakatar-app.cabal
tirakatar-server/: configuration.yaml  ghcid.sh  runServer.sh  tirakatar-server.cabal
tirakatar-server/app/: Main.hs
tirakatar-server/src/Tirakatar/: Server.hs
tirakatar-server/src/Tirakatar/Server/: App.hs  Config.hs  Environment.hs  Monad.hs  Utils.hs
tirakatar-server/src/Tirakatar/Server/Monad/: Prim.hs
tirakatar/app/: Main.hs
tirakatar/java/org/tirakatar/: Camera.java  Clipboard.java  Clock.java  OpenUrl.java  Share.java
tirakatar/src/Tirakatar/: App.hs
tirakatar/src/Tirakatar/App/: Alert.hs  Camera.hs  Clipboard.hs  Elements.hs  Embed.hs  IP.hs  Id.hs  Language.hs  Loading.hs  Log.hs  Main.hs  Menu.hs  Monad.hs  OpenUrl.hs  Password.hs  Platform.hs  Resize.hs  Settings.hs  Share.hs  Style.hs  TimeZone.hs  Types.hs  Util.hs  Validate.hs  Wrapper.hs  Yaml.hs
tirakatar/src/Tirakatar/App/Alert/: Handler.hs
tirakatar/src/Tirakatar/App/Elements/: Inplace.hs  Input.hs  Toggle.hs
tirakatar/src/Tirakatar/App/Elements/Input/: Class.hs
tirakatar/src/Tirakatar/App/Embed/: TH.hs
tirakatar/src/Tirakatar/App/Localization/: AuthInfo.hs  IP.hs  Initial.hs  Inplace.hs  Input.hs  Native.hs  Password.hs  PatternKey.hs  Seed.hs  Settings.hs  Storage.hs  Util.hs
tirakatar/src/Tirakatar/App/Log/: Event.hs  Page.hs  Reader.hs  Types.hs  Writer.hs
tirakatar/src/Tirakatar/App/Monad/: Async.hs  Auth.hs  Base.hs  Client.hs  Front.hs  Prim.hs  Storage.hs  Unauth.hs  Util.hs
tirakatar/src/Tirakatar/App/Node/: Socket.hs
tirakatar/src/Tirakatar/App/Page/: Canvas.hs  Initial.hs  Password.hs  PatternKey.hs  QRCode.hs  Seed.hs
tirakatar/src/Tirakatar/App/Page/Settings/: Unauth.hs
tirakatar/src/Tirakatar/App/Status/: Types.hs
tirakatar/src/Tirakatar/App/Storage/: AuthInfo.hs  Util.hs
tirakatar/src/Tirakatar/App/Widget/: GraphPinCode.hs
types/: README.md  tirakatar-types.cabal
types/src/Tirakatar/: Types.hs
types/src/Tirakatar/Types/: Orphanage.hs  Restore.hs  Storage.hs
types/src/Tirakatar/Types/Keys/: Prim.hs
types/src/Tirakatar/Types/Storage/: Private.hs  Public.hs  Storage.hs
version/: tirakatar-version.cabal
version/src/Tirakatar/App/: Version.hs
version/src/Tirakatar/App/Version/: Internal.hs
