name:                tirakatar-common
version:             1.0.0.0
synopsis:            Helpers for aeson/lens/text for tirakatar app
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Tirakatar.Aeson
    Tirakatar.IO
    Tirakatar.Text
    Tirakatar.Lens
    Tirakatar.Yaml
  build-depends:
      base
    , aeson
    , atomic-write
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , directory
    , lens
    , safe
    , template-haskell
    , text
    , yaml -any
  default-language:    Haskell2010
