name:                tirakatar-crypto
version:             0.1.0.0
synopsis:            Cryptographic package for tirakatar messenger
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG

library
  Ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Tirakatar.Crypto
    Tirakatar.Crypto.AES256
    Tirakatar.Crypto.Base58
    Tirakatar.Crypto.ECDSA
    Tirakatar.Crypto.ECIES
    Tirakatar.Crypto.Mnemonic
    Tirakatar.Crypto.PBKDF
    Tirakatar.Crypto.Util
  build-depends:
      base                      >= 4.9      && < 5
    , aeson                     >= 1.3      && < 1.5
    , base16-bytestring         >= 0.1      && < 0.2
    , bytestring                >= 0.10     && < 0.11
    , bytestring-trie           >= 0.2.5    && < 0.3
    , cereal                    >= 0.5      && < 0.6
    , containers                >= 0.6      && < 0.7
    , cryptonite                >= 0.25     && < 0.26
    , entropy                   >= 0.3.7    && < 0.4.1.6
    , hashable                  >= 1.2.7.0  && < 1.3.0.1
    , memory                    >= 0.14.16  && < 0.15.1
    , mtl                       >= 2.2      && < 2.3
    , string-conversions        >= 0.4.0.1  && <0.4.0.2
    , text                      >= 1.2      && < 1.3
    , vector                    >= 0.10     && < 0.13
  default-language:    Haskell2010
  default-extensions:
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
