name:                tirakatar-server
version:             0.1.0.0
synopsis:            Tirakatar messenger server
description:         See README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10
author:              Levon Oganyan
maintainer:          Levon Oganyan <lemarwin42@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Tirakatar.Server
    Tirakatar.Server.App
    Tirakatar.Server.Config
    Tirakatar.Server.Environment
    Tirakatar.Server.Monad
    Tirakatar.Server.Monad.Prim
    Tirakatar.Server.Utils
  build-depends:
        base                    >= 4.7    &&  < 4.13
      , aeson                   >= 1.4    &&  < 1.5
      , containers              >= 0.6    &&  < 0.7
      , exceptions              >= 0.10   &&  < 0.11
      , hashable                >= 1.2    &&  < 1.3
      , immortal                >= 0.3    &&  < 0.5
      , monad-control           >= 1.0    &&  < 1.1
      , monad-logger            >= 0.3    &&  < 0.4
      , mtl                     >= 2.2    &&  < 2.3
      , stm                     >= 2.5    &&  < 2.6
      , text                    >= 1.2    &&  < 1.3
      , time                    >= 1.8    &&  < 1.9
      , transformers-base       >= 0.4    &&  < 0.5
      , unix                    >= 2.7    &&  < 2.8
      , unliftio-core           >= 0.1    &&  < 0.2
      , unordered-containers    >= 0.2    &&  < 0.3
      , yaml                    >= 0.11   &&  < 0.12
      , tirakatar-common
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DuplicateRecordFields
    QuantifiedConstraints
    UndecidableInstances
    LambdaCase

executable tirakatar-server
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N -A64m -AL256m -I0 -T"
  build-depends:
      base
    , tirakatar-server
    , immortal
    , monad-logger
    , optparse-applicative     >= 0.14 && <0.15
    , text
    , time

  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards

test-suite tirakatar-server-test
  type: exitcode-stdio-1.0
  Default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestMain.hs
  exposed-modules: Test.Generators
  other-modules: Test.Generators
  build-depends:
      base
    , attoparsec
    , bytestring
    , cereal
    , deepseq                  >= 1.4     &&  < 1.5
    , parallel                 >= 3.2     &&  < 3.3
    , QuickCheck
    , quickcheck-instances
    , vector
    , tirakatar-server
  default-extensions:
    RecordWildCards
    OverloadedStrings
